--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pmndrs/assets": "^1.0.0",
     "@react-three/drei": "^9.56.20",
     "@react-three/fiber": "^8.11.0",
     "@theatre/core": "^0.6.0",
