--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@theatre/core": "^0.6.0",
     "@theatre/r3f": "^0.6.0",
     "@theatre/studio": "^0.6.0",
+    "leva": "^0.9.35",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.149.0"
