--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@pmndrs/assets": "^1.0.0",
+    "@react-spring/three": "^9.7.2",
     "@react-three/drei": "^9.56.20",
     "@react-three/fiber": "^8.11.0",
     "@theatre/core": "^0.6.0",
@@ -19,6 +20,8 @@
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
+    "react-spring": "^9.7.1",
     "three": "^0.149.0"
   },
   "devDependencies": {
